@@ -3,6 +3,7 @@
 * Do not use VER_LOW_S for now (to verify mempool txs) as it is baning some peers
 * Enforce CVS verification for blocks height 417312 or higher (not for testnet)
 * Implemented BIP113 (Median time-past as endpoint for lock-time calculations)
+* New TextUI command "bip9" - extracts BIP9 relevant info from the current chain
 
 1.6.3 - 2016-05-28
 * Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
